tests/errors/trait-duplicate-method.ari
trait Show[T] {
  fn show(self) -> i64
  fn show(value: T) -> i64
}

fn main() -> i64 {
  return 0;
}
